force-app/main/default/objects/Kiva_Loan__c/Kiva_Loan__c.object-meta.xml
<CustomObject>
    <label>Kiva Loan</label>
    <nameField>
        <displayFormat>KL-{0000000}</displayFormat>
        <label>Kiva Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kiva Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>