force-app/main/default/objects/Kiva_Loan__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture,120</fullName>
            </value>
            <value>
                <fullName>Animal Sales,110</fullName>
            </value>
            <value>
                <fullName>Aquaculture,218</fullName>
            </value>
            <value>
                <fullName>Beekeeping,217</fullName>
            </value>
            <value>
                <fullName>Cattle,56</fullName>
            </value>
            <value>
                <fullName>Dairy,61</fullName>
            </value>
            <value>
                <fullName>Farm Supplies,68</fullName>
            </value>
            <value>
                <fullName>Farming,31</fullName>
            </value>
            <value>
                <fullName>Flowers,177</fullName>
            </value>
            <value>
                <fullName>Land Rental,11</fullName>
            </value>
            <value>
                <fullName>Livestock,73</fullName>
            </value>
            <value>
                <fullName>Pigs,99</fullName>
            </value>
            <value>
                <fullName>Poultry,102</fullName>
            </value>
            <value>
                <fullName>Veterinary Sales,13</fullName>
            </value>
            <value>
                <fullName>Motorcycle Transport,37</fullName>
            </value>
            <value>
                <fullName>Rickshaw,156</fullName>
            </value>
            <value>
                <fullName>Taxi,59</fullName>
            </value>
            <value>
                <fullName>Transportation,107</fullName>
            </value>
            <value>
                <fullName>Adult Care,207</fullName>
            </value>
            <value>
                <fullName>Air Conditioning,105</fullName>
            </value>
            <value>
                <fullName>Auto Repair,92</fullName>
            </value>
            <value>
                <fullName>Barber Shop,28</fullName>
            </value>
            <value>
                <fullName>Beauty Salon,49</fullName>
            </value>
            <value>
                <fullName>Bicycle Repair,21</fullName>
            </value>
            <value>
                <fullName>Bookbinding,159</fullName>
            </value>
            <value>
                <fullName>Call Center,157</fullName>
            </value>
            <value>
                <fullName>Child Care,129</fullName>
            </value>
            <value>
                <fullName>Cleaning Services,204</fullName>
            </value>
            <value>
                <fullName>Cobbler,101</fullName>
            </value>
            <value>
                <fullName>Communications,206</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>