force-app/main/default/objects/Kiva_Loan__c/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <formula>IF(ISBLANK(TEXT(Activity__c)),
   &quot;0&quot;, RIGHT(TEXT(Activity__c), LEN(TEXT(Activity__c)) - FIND(&quot;,&quot;, TEXT(Activity__c))))</formula>
    <label>Activity ID</label>
    <type>Text</type>
</CustomField>