force-app/main/default/objects/Kiva_Loan__c/fields/ADA__c.field-meta.xml
<CustomField>
    <fullName>ADA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADA</label>
    <referenceTo>MZ_ADA__c</referenceTo>
    <relationshipLabel>Kiva Loans</relationshipLabel>
    <relationshipName>Kiva_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>