force-app/main/default/objects/Kiva_Loan__c/fields/Adm_Fee__c.field-meta.xml
<CustomField>
    <fullName>Adm_Fee__c</fullName>
    <formula>Kiva_Loan_Amount_Approved__c *  Annualized_Interest_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin. Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>