force-app/main/default/objects/Kiva_Loan__c/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <label>XXX_Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>