force-app/main/default/objects/Kiva_Loan__c/fields/agents_do_you_work_with__c.field-meta.xml
<CustomField>
    <fullName>agents_do_you_work_with__c</fullName>
    <label># female agents worked with</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>