force-app/main/default/objects/Kiva_Loan__c/fields/Amount_each_member_save_s__c.field-meta.xml
<CustomField>
    <fullName>Amount_each_member_save_s__c</fullName>
    <label>Amount each member saves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>