force-app/main/default/objects/Kiva_Loan__c/fields/Annualized_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Interest_Rate__c</fullName>
    <defaultValue>0.10</defaultValue>
    <label>Annualized Interest Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>