force-app/main/default/objects/Kiva_Loan__c/fields/attended_an_iDE_training__c.field-meta.xml
<CustomField>
    <fullName>attended_an_iDE_training__c</fullName>
    <label>attended an iDE training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>