force-app/main/default/objects/Kiva_Loan__c/fields/BI_for_co_applicant_back_photo__c.field-meta.xml
<CustomField>
    <fullName>BI_for_co_applicant_back_photo__c</fullName>
    <formula>IF (ISBLANK( BI_for_co_applicant_back_Photo_URL__c ),
&quot;No Photo&quot;,
HYPERLINK(IF( TEXT($Profile.UserType )= &quot;PowerPartner&quot;,
SUBSTITUTE(SUBSTITUTE(BI_for_co_applicant_back_Photo_URL__c , &quot;na1.salesforce.com&quot;, &quot;ide.force.com/taroworks&quot;),&quot;ideglobal.my.salesforce.com&quot;,&quot;ide.force.com/taroworks&quot;)
, SUBSTITUTE(BI_for_co_applicant_back_Photo_URL__c , &quot;na1.salesforce.com&quot;, &quot;ideglobal--c.na8.content.force.com&quot;) ) ,
IMAGE(IF( TEXT($Profile.UserType )= &quot;PowerPartner&quot;,
SUBSTITUTE(SUBSTITUTE(BI_for_co_applicant_back_Photo_URL__c , &quot;na1.salesforce.com&quot;, &quot;ide.force.com/taroworks&quot;),&quot;ideglobal.my.salesforce.com&quot;,&quot;ide.force.com/taroworks&quot;)
, SUBSTITUTE(BI_for_co_applicant_back_Photo_URL__c , &quot;na1.salesforce.com&quot;, &quot;ideglobal--c.na8.content.force.com&quot;) )
, &quot;Enlarge Customer Photo&quot;, 320, 240)
)
)</formula>
    <label>BI for co-applicant (back) photo</label>
    <type>Text</type>
</CustomField>