force-app/main/default/objects/Kiva_Loan__c/fields/BI_for_co_applicant_front_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>BI_for_co_applicant_front_Photo_URL__c</fullName>
    <label>BI for co-applicant (front) photo URL</label>
    <type>Url</type>
</CustomField>