force-app/main/default/objects/Kiva_Loan__c/fields/Business_challenges_faced__c.field-meta.xml
<CustomField>
    <fullName>Business_challenges_faced__c</fullName>
    <label>Business challenges faced</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>