force-app/main/default/objects/Kiva_Loan__c/fields/Business_managed_after_th__c.field-meta.xml
<CustomField>
    <fullName>Business_managed_after_th__c</fullName>
    <label>Business managed after Kiva Loan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buying and selling a new agriculture product</fullName>
            </value>
            <value>
                <fullName>Bought a truck and started renting it to other producers/traders</fullName>
            </value>
            <value>
                <fullName>Started an inputs trading business</fullName>
            </value>
            <value>
                <fullName>Seed multiplication/commercialization</fullName>
            </value>
            <value>
                <fullName>Milling, threshing services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>