force-app/main/default/objects/Kiva_Loan__c/fields/Business_of_the_majority_of_group_member__c.field-meta.xml
<CustomField>
    <fullName>Business_of_the_majority_of_group_member__c</fullName>
    <label>Business of the majority of group member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traders (buy and sell vegetables/grains)</fullName>
            </value>
            <value>
                <fullName>Producers</fullName>
            </value>
            <value>
                <fullName>Ag-input retailers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>