force-app/main/default/objects/Kiva_Loan__c/fields/Business_Registration_document_photo__c.field-meta.xml
<CustomField>
    <fullName>Business_Registration_document_photo__c</fullName>
    <formula>IF (ISBLANK( Business_Registration_Document_Photo_URL__c 
),
&quot;No Photo&quot;,
HYPERLINK(IF( TEXT($Profile.UserType )= &quot;PowerPartner&quot;,
SUBSTITUTE(SUBSTITUTE( Business_Registration_Document_Photo_URL__c 
, &quot;na1.salesforce.com&quot;, &quot;ide.force.com/taroworks&quot;),&quot;ideglobal.my.salesforce.com&quot;,&quot;ide.force.com/taroworks&quot;)
, SUBSTITUTE( Business_Registration_Document_Photo_URL__c 
, &quot;na1.salesforce.com&quot;, &quot;ideglobal--c.na8.content.force.com&quot;) ) ,
IMAGE(IF( TEXT($Profile.UserType )= &quot;PowerPartner&quot;,
SUBSTITUTE(SUBSTITUTE( Business_Registration_Document_Photo_URL__c 
, &quot;na1.salesforce.com&quot;, &quot;ide.force.com/taroworks&quot;),&quot;ideglobal.my.salesforce.com&quot;,&quot;ide.force.com/taroworks&quot;)
, SUBSTITUTE( Business_Registration_Document_Photo_URL__c 
, &quot;na1.salesforce.com&quot;, &quot;ideglobal--c.na8.content.force.com&quot;) )
, &quot;Enlarge Customer Photo&quot;, 320, 240)
)
)</formula>
    <label>Business Registration document photo</label>
    <type>Text</type>
</CustomField>