force-app/main/default/objects/Kiva_Loan__c/fields/Business_Registration_Document_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Business_Registration_Document_Photo_URL__c</fullName>
    <label>Business Registration document photo URL</label>
    <type>Url</type>
</CustomField>