force-app/main/default/objects/Kiva_Loan__c/fields/Cash_Flow_Statement_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_Statement_Photo_URL__c</fullName>
    <label>Cash Flow Statement photo URL</label>
    <type>Url</type>
</CustomField>