force-app/main/default/objects/Kiva_Loan__c/fields/Category_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Loan__c</fullName>
    <label>Category of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture,18</fullName>
            </value>
            <value>
                <fullName>Agricultural Equipment,96</fullName>
            </value>
            <value>
                <fullName>Agricultural Infrastructure,85</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>