force-app/main/default/objects/Kiva_Loan__c/fields/Challenges_repaying_the_previous_Kiva__c.field-meta.xml
<CustomField>
    <fullName>Challenges_repaying_the_previous_Kiva__c</fullName>
    <label>Challenges repaying previous Kiva loan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>