force-app/main/default/objects/Kiva_Loan__c/fields/Change_in_income_from_prev_Kiva_loan__c.field-meta.xml
<CustomField>
    <fullName>Change_in_income_from_prev_Kiva_loan__c</fullName>
    <label>Change in income from previous Kiva loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>