force-app/main/default/objects/Kiva_Loan__c/fields/Client_Waiver_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Client_Waiver_Photo_URL__c</fullName>
    <label>Client Waiver Photo URL</label>
    <type>Url</type>
</CustomField>