force-app/main/default/objects/Kiva_Loan__c/fields/client_waiver_signed__c.field-meta.xml
<CustomField>
    <fullName>client_waiver_signed__c</fullName>
    <formula>NOT(ISBLANK( Client_Waiver_Photo_URL__c ))</formula>
    <label>Client Waiver Signed</label>
    <type>Checkbox</type>
</CustomField>