force-app/main/default/objects/Kiva_Loan__c/fields/Climate_smart_technologies_used__c.field-meta.xml
<CustomField>
    <fullName>Climate_smart_technologies_used__c</fullName>
    <label>Climate smart technologies used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solar Pump</fullName>
            </value>
            <value>
                <fullName>Bokashi</fullName>
            </value>
            <value>
                <fullName>Organic Fertilizers</fullName>
            </value>
            <value>
                <fullName>Rainwater harvesting tank</fullName>
            </value>
            <value>
                <fullName>Biogas unit</fullName>
            </value>
            <value>
                <fullName>Solar technologies</fullName>
            </value>
            <value>
                <fullName>Mulching</fullName>
            </value>
            <value>
                <fullName>Biomass cookstove</fullName>
            </value>
            <value>
                <fullName>Hydroponic farming</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>