force-app/main/default/objects/Kiva_Loan__c/fields/Completed_2_Kiva_loan_cycles__c.field-meta.xml
<CustomField>
    <fullName>Completed_2_Kiva_loan_cycles__c</fullName>
    <label>Completed 2 Kiva loan cycles</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>