force-app/main/default/objects/Kiva_Loan__c/fields/Completed_finance_training_as_a_group__c.field-meta.xml
<CustomField>
    <fullName>Completed_finance_training_as_a_group__c</fullName>
    <label>Completed finance training as a group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>