force-app/main/default/objects/Kiva_Loan__c/fields/Create_Time_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Create_Time_KIVA__c</fullName>
    <label>Create Time (KIVA)</label>
    <type>DateTime</type>
</CustomField>