force-app/main/default/objects/Kiva_Loan__c/fields/Currency_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Currency_KIVA__c</fullName>
    <formula>&quot;MZN&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency (KIVA)</label>
    <type>Text</type>
</CustomField>