force-app/main/default/objects/Kiva_Loan__c/fields/Date_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Date_Disbursed__c</fullName>
    <label>Date Disbursed</label>
    <type>DateTime</type>
</CustomField>