force-app/main/default/objects/Kiva_Loan__c/fields/Date_Disbursed_API__c.field-meta.xml
<CustomField>
    <fullName>Date_Disbursed_API__c</fullName>
    <formula>TEXT( DATEVALUE(Date_Disbursed__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Disbursed (API)</label>
    <type>Text</type>
</CustomField>