force-app/main/default/objects/Kiva_Loan__c/fields/Date_Fundraising_Began__c.field-meta.xml
<CustomField>
    <fullName>Date_Fundraising_Began__c</fullName>
    <label>Date Fundraising  Began</label>
    <type>DateTime</type>
</CustomField>