force-app/main/default/objects/Kiva_Loan__c/fields/Date_of_Last_Training__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Training__c</fullName>
    <label>Date of Last Training</label>
    <summarizedField>Kiva_Loan_Participation__c.Date_of_last_training__c</summarizedField>
    <summaryForeignKey>Kiva_Loan_Participation__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>