force-app/main/default/objects/Kiva_Loan__c/fields/Date_Paying_Back_Period_Began__c.field-meta.xml
<CustomField>
    <fullName>Date_Paying_Back_Period_Began__c</fullName>
    <label>Date Paying Back Period Began</label>
    <type>DateTime</type>
</CustomField>