force-app/main/default/objects/Kiva_Loan__c/fields/Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Posted__c</fullName>
    <label>Date Posted</label>
    <type>DateTime</type>
</CustomField>