force-app/main/default/objects/Kiva_Loan__c/fields/Date_Raised__c.field-meta.xml
<CustomField>
    <fullName>Date_Raised__c</fullName>
    <label>Date Raised</label>
    <type>DateTime</type>
</CustomField>