force-app/main/default/objects/Kiva_Loan__c/fields/Days_Spent_as_New_Application__c.field-meta.xml
<CustomField>
    <fullName>Days_Spent_as_New_Application__c</fullName>
    <formula>IF (ISBLANK( Loan_Approval_Submission_Date__c ),
    TODAY() -  Loan_Application_Date__c ,
    (Loan_Approval_Submission_Date__c - Loan_Application_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Spent as New Application</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>