force-app/main/default/objects/Kiva_Loan__c/fields/Days_spent_awaiting_Approval_Decision__c.field-meta.xml
<CustomField>
    <fullName>Days_spent_awaiting_Approval_Decision__c</fullName>
    <formula>IF(ISBLANK( Loan_Approval_Decision_Date__c),
   TODAY() -  Loan_Approval_Submission_Date__c ,
    Loan_Approval_Decision_Date__c - Loan_Approval_Submission_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days spent awaiting Approval Decision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>