force-app/main/default/objects/Kiva_Loan__c/fields/Days_Spent_Funding__c.field-meta.xml
<CustomField>
    <fullName>Days_Spent_Funding__c</fullName>
    <formula>IF (ISBLANK(   datevalue(Date_Disbursed__c) ),
    TODAY() -  Loan_Approval_Decision_Date__c ,
    datevalue(Date_Disbursed__c)- Loan_Approval_Decision_Date__c )</formula>
    <label>Days Spent Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>