force-app/main/default/objects/Kiva_Loan__c/fields/Defaulted_Time_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Defaulted_Time_KIVA__c</fullName>
    <label>Defaulted Time (KIVA)</label>
    <type>DateTime</type>
</CustomField>