force-app/main/default/objects/Kiva_Loan__c/fields/Delinquent_per_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_per_KIVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delinquent per KIVA</label>
    <type>Checkbox</type>
</CustomField>