force-app/main/default/objects/Kiva_Loan__c/fields/description_language_id__c.field-meta.xml
<CustomField>
    <fullName>description_language_id__c</fullName>
    <defaultValue>&quot;English&quot;</defaultValue>
    <description>Description Language ID</description>
    <inlineHelpText>Description Language ID</inlineHelpText>
    <label>Language of Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>