force-app/main/default/objects/Kiva_Loan__c/fields/Difficult_Default_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Difficult_Default_Borrower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Difficult/Default Borrower</label>
    <type>Checkbox</type>
</CustomField>