force-app/main/default/objects/Kiva_Loan__c/fields/District_and_locality_operate__c.field-meta.xml
<CustomField>
    <fullName>District_and_locality_operate__c</fullName>
    <label>District and locality operating in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>