force-app/main/default/objects/Kiva_Loan__c/fields/Distrito__c.field-meta.xml
<CustomField>
    <fullName>Distrito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distrito</label>
    <referenceTo>MZ_Distrito__c</referenceTo>
    <relationshipLabel>Kiva Loans</relationshipLabel>
    <relationshipName>Kiva_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>