force-app/main/default/objects/Kiva_Loan__c/fields/Distrito_Moz__c.field-meta.xml
<CustomField>
    <fullName>Distrito_Moz__c</fullName>
    <label>Distrito (Moz)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>