force-app/main/default/objects/Kiva_Loan__c/fields/Employee_Loan__c.field-meta.xml
<CustomField>
    <fullName>Employee_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>NOT TO BE LOANED TO AGAIN</inlineHelpText>
    <label>Employee Loan</label>
    <type>Checkbox</type>
</CustomField>