force-app/main/default/objects/Kiva_Loan__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>