force-app/main/default/objects/Kiva_Loan__c/fields/Expected_Collected_gap__c.field-meta.xml
<CustomField>
    <fullName>Expected_Collected_gap__c</fullName>
    <formula>Total_Amount_Due_to_Date__c  - Total_Amount_Paid_to_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected-Collected gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>