force-app/main/default/objects/Kiva_Loan__c/fields/Experience_with_credit_before_Kiva__c.field-meta.xml
<CustomField>
    <fullName>Experience_with_credit_before_Kiva__c</fullName>
    <label>Experience with credit before Kiva</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>