force-app/main/default/objects/Kiva_Loan__c/fields/Expired_Time_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Expired_Time_KIVA__c</fullName>
    <label>Expired Time (KIVA)</label>
    <type>DateTime</type>
</CustomField>