force-app/main/default/objects/Kiva_Loan__c/fields/Farm_decision_maker__c.field-meta.xml
<CustomField>
    <fullName>Farm_decision_maker__c</fullName>
    <label>Farm decision maker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yourself</fullName>
            </value>
            <value>
                <fullName>Someone Else</fullName>
            </value>
            <value>
                <fullName>Jointly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>