force-app/main/default/objects/Kiva_Loan__c/fields/female_producers_buy_products_from__c.field-meta.xml
<CustomField>
    <fullName>female_producers_buy_products_from__c</fullName>
    <label># female producers buy products from</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>