force-app/main/default/objects/Kiva_Loan__c/fields/Finance_or_business_trainings_completed__c.field-meta.xml
<CustomField>
    <fullName>Finance_or_business_trainings_completed__c</fullName>
    <label>Finance or business trainings completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>More than 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>