force-app/main/default/objects/Kiva_Loan__c/fields/Group_s_savings_before_the_loan__c.field-meta.xml
<CustomField>
    <fullName>Group_s_savings_before_the_loan__c</fullName>
    <label>Group&apos;s savings before the loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>