force-app/main/default/objects/Kiva_Loan__c/fields/grp_save_after_loan__c.field-meta.xml
<CustomField>
    <fullName>grp_save_after_loan__c</fullName>
    <label>Group savings after the loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>