force-app/main/default/objects/Kiva_Loan__c/fields/Had_Challenges_repaying_in_past__c.field-meta.xml
<CustomField>
    <fullName>Had_Challenges_repaying_in_past__c</fullName>
    <label>Had Challenges repaying in past</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>