force-app/main/default/objects/Kiva_Loan__c/fields/How_finance_training_helped_group__c.field-meta.xml
<CustomField>
    <fullName>How_finance_training_helped_group__c</fullName>
    <label>How finance training helped group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>