force-app/main/default/objects/Kiva_Loan__c/fields/How_many_SHFs__c.field-meta.xml
<CustomField>
    <fullName>How_many_SHFs__c</fullName>
    <label>How many SHFs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>