force-app/main/default/objects/Kiva_Loan__c/fields/Impact_of_Kiva_Loan__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_Kiva_Loan__c</fullName>
    <label>Impact of Kiva Loan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access to clean water</fullName>
            </value>
            <value>
                <fullName>Built a new house</fullName>
            </value>
            <value>
                <fullName>Access to Sanitation</fullName>
            </value>
            <value>
                <fullName>Access to Education for children</fullName>
            </value>
            <value>
                <fullName>Access to Transportation</fullName>
            </value>
            <value>
                <fullName>Access to better health facilities</fullName>
            </value>
            <value>
                <fullName>Acquired/built business assets (shop, warehouse, etc)</fullName>
            </value>
            <value>
                <fullName>Increased production</fullName>
            </value>
            <value>
                <fullName>Increased business volume (for those who are doing business)</fullName>
            </value>
            <value>
                <fullName>Improved product quality</fullName>
            </value>
            <value>
                <fullName>Improved financial discipline</fullName>
            </value>
            <value>
                <fullName>Improved household diet (quantity and quality)</fullName>
            </value>
            <value>
                <fullName>Bought household assets, specify</fullName>
            </value>
            <value>
                <fullName>Able to send children to school</fullName>
            </value>
            <value>
                <fullName>Improved house</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>