force-app/main/default/objects/Kiva_Loan__c/fields/Impact_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Impact_Survey_Date__c</fullName>
    <label>Impact Survey Date</label>
    <type>Date</type>
</CustomField>