force-app/main/default/objects/Kiva_Loan__c/fields/Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Type__c</fullName>
    <label>Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Flat Interest Rate</fullName>
            </value>
            <value>
                <fullName>Declining Balance</fullName>
            </value>
            <value>
                <fullName>Declining Balance with Equal Principle Installments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>