force-app/main/default/objects/Kiva_Loan__c/fields/Issue_Feedback_Time_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Issue_Feedback_Time_KIVA__c</fullName>
    <label>Issue Feedback Time (KIVA)</label>
    <type>DateTime</type>
</CustomField>