force-app/main/default/objects/Kiva_Loan__c/fields/Issue_Reported_by__c.field-meta.xml
<CustomField>
    <fullName>Issue_Reported_by__c</fullName>
    <label>Issue Reported by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>